bruh: get post + delete entry working with htmx

--- a/internal/template/base.templ
+++ b/internal/template/base.templ
@@ -11,7 +11,7 @@ templ Base() {
 			<link rel="stylesheet" href="/public/app.css"/>
 			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
 		</head>
-		<body class="antialiased">
+		<body class="antialiased font-mono">
 			{ children... }
 		</body>
 	</html>
