--- a/internal/templates/habits.templ
+++ b/internal/templates/habits.templ
@@ -20,20 +20,24 @@ templ NewHabit(data NewHabitFormData) {
 	}
 }
 
-templ Habits() {
+templ Habits(habits []model.Habit) {
 	@Base("Habits") {
-		<div class="">
-			<a href="/habits/new" class="">New</a>
+		<div class="flex flex-col">
+			<a href="/habits/new" class="w-10 self-end bg-blue-600 text-center text-white font-medium my-1 py-1 rounded-md hover:bg-blue-700 transition">+</a>
+			<div class="">
+				for _, habit := range habits {
+					@Habit(habit)
+				}
+			</div>
 		</div>
 	}
 }
 
 templ Habit(habit model.Habit) {
-	@Base(habit.Name) {
-		<div class="">
-			<h1 class={ h1CSS }>
-				{ habit.Name }
-			</h1>
-		</div>
-	}
+	<div class="my-2">
+		<h1 class={ h1CSS }>
+			{ habit.Name }
+		</h1>
+		<div class="py-2">TODO</div>
+	</div>
 }
