--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -9,6 +9,7 @@ templ Base(title string) {
 			<meta charset="UTF-8"/>
 			<link rel="stylesheet" href="/public/app.css"/>
 			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
+			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 		</head>
 		<body class="flex flex-col min-h-screen">
 			<header>
