--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -1,4 +1,6 @@
-package templates
+package layouts
+
+import "github.com/tneuqole/habitmap/internal/templates/components"
 
 templ Base(title string) {
 	<html lang="en">
@@ -7,10 +9,11 @@ templ Base(title string) {
 			<meta charset="UTF-8"/>
 			<link rel="stylesheet" href="/public/app.css"/>
 			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
+			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 		</head>
 		<body class="flex flex-col min-h-screen">
 			<header>
-				@Nav()
+				@components.Nav()
 			</header>
 			<main class="flex-1 m-4">
 				{ children... }
