--- a/internal/templates/components/habit.templ
+++ b/internal/templates/components/habit.templ
@@ -6,11 +6,15 @@ import (
 	"fmt"
 )
 
-templ Habit(habit model.Habit) {
+templ Habit(habit model.Habit, months []string, entries map[string][]model.Entry) {
 	<div class="my-2">
 		<h1 class={ templates.H1CSS }>
 			<a href={ templ.URL(fmt.Sprintf("/habits/%d", habit.ID)) }>{ habit.Name }</a>
 		</h1>
-		<div class="py-2">TODO</div>
+		<div class="py-2">
+			for _, month := range months {
+				@Month(month, entries[month])
+			}
+		</div>
 	</div>
 }
