--- a/internal/templates/components/month.templ
+++ b/internal/templates/components/month.templ
@@ -9,7 +9,7 @@ var thCSS = "aspect-square"
 var trCSS = ""
 
 templ Month(month string, entries []model.Entry) {
-	<div class="flex flex-col items-center">
+	<div class="flex flex-col items-center m-1">
 		<h1 class="text-2xl font-medium">{ month }</h1>
 		<table class="m-1 table-auto border-separate border-spacing-1 border border-solid rounded-md">
 			<thead>
