--- a/public/app.css
+++ b/public/app.css
@@ -610,6 +610,9 @@
   .flex-row {
     flex-direction: row;
   }
+  .flex-wrap {
+    flex-wrap: wrap;
+  }
   .items-center {
     align-items: center;
   }
