--- a/internal/templates/components/habit.templ
+++ b/internal/templates/components/habit.templ
@@ -1,17 +1,13 @@
 package components
 
-import (
-	"github.com/tneuqole/habitmap/internal/model"
-	"github.com/tneuqole/habitmap/internal/templates"
-	"fmt"
-)
+import "github.com/tneuqole/habitmap/internal/model"
 
 templ Habit(habit model.Habit, months []string, entries map[string][]model.Entry) {
 	<div class="my-2">
-		<h1 class={ templates.H1CSS }>
-			<a href={ templ.URL(fmt.Sprintf("/habits/%d", habit.ID)) }>{ habit.Name }</a>
-		</h1>
-		<div class="flex flex-row flex-wrap py-2">
+		<!-- <h1 class={ templates.H1CSS }> -->
+		<!-- 	<a href={ templ.URL(fmt.Sprintf("/habits/%d", habit.ID)) }>{ habit.Name }</a> -->
+		<!-- </h1> -->
+		<div class="flex flex-row flex-wrap justify-center py-2">
 			for _, month := range months {
 				@Month(month, entries[month])
 			}
