--- a/internal/templates/pages/habit.templ
+++ b/internal/templates/pages/habit.templ
@@ -1,66 +1,83 @@
 package pages
 
 import (
+	"fmt"
 	"github.com/tneuqole/habitmap/internal/model"
+	"github.com/tneuqole/habitmap/internal/templates"
 	"github.com/tneuqole/habitmap/internal/templates/components"
 	"github.com/tneuqole/habitmap/internal/templates/layouts"
-	"fmt"
 )
 
-templ Habit(habit model.Habit) {
+var btnCSS = "w-7 h-7 mx-2 rounded-md bg-blue-600 text-center text-white hover:bg-blue-700 transition"
+
+templ Habit(habit model.Habit, months []string, entries map[string][]model.Entry) {
 	@layouts.Base("Habit") {
-		<div class="flex flex-row justify-between">
-			<div class="">
-				@components.Habit(habit)
-			</div>
-			<div x-data="{ open: false }">
-				<button
-					@click="open = !open"
-					type="button"
-					class="w-10 self-start bg-blue-600 text-center text-white font-medium my-2 py-1 rounded-md hover:bg-blue-700 transition"
-					id="menu-button"
-					aria-expanded="true"
-					aria-haspopup="true"
-				>
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="block m-auto h-6 w-6"
-						viewBox="0 0 24 24"
-						fill="currentColor"
-						aria-hidden="true"
-					>
-						<circle cx="6" cy="12" r="2"></circle>
-						<circle cx="12" cy="12" r="2"></circle>
-						<circle cx="18" cy="12" r="2"></circle>
-					</svg>
-				</button>
-				<div
-					x-show="open"
-					@click.away="open = false"
-					class="origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
-					role="menu"
-					aria-orientation="vertical"
-					aria-labelledby="menu-button"
-				>
-					<div class="py-1" role="none">
-						<a
-							href={ templ.URL(fmt.Sprintf("/habits/%d/edit", habit.ID)) }
-							class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
-							role="menuitem"
+		<div class="flex flex-col">
+			<div class="grid grid-cols-3">
+				<h1 class={ templates.H1CSS + " flex items-center" }>
+					<a href={ templ.URL(fmt.Sprintf("/habits/%d", habit.ID)) }>{ habit.Name }</a>
+				</h1>
+				<div class="flex flex-row items-center justify-center">
+					<button class={ btnCSS }>&lt;</button>
+					<p class="font-bold text-xl">2025</p>
+					<button class={ btnCSS }>&gt;</button>
+				</div>
+				<div class="flex flex-row justify-self-end">
+					<div class="flex items-center font-normal m-2 rounded-md border-2 border-blue-600 overflow-hidden w-36 h-8">
+						<div class="w-1/2 py-1 font-bold text-center bg-blue-600 text-white">Year</div>
+						<div class="w-1/2 py-1 font-bold text-blue-600 text-center transition hover:bg-blue-700 hover:text-white">Month</div>
+					</div>
+					<div class="" x-data="{ open: false }">
+						<button
+							@click="open = !open"
+							type="button"
+							class="w-8 h-8 self-start bg-blue-600 text-center text-white font-medium my-2 py-1 rounded-md hover:bg-blue-700 transition"
+							id="menu-button"
+							aria-expanded="true"
+							aria-haspopup="true"
 						>
-							Edit
-						</a>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								class="block m-auto h-6 w-6"
+								viewBox="0 0 24 24"
+								fill="currentColor"
+								aria-hidden="true"
+							>
+								<circle cx="6" cy="12" r="2"></circle>
+								<circle cx="12" cy="12" r="2"></circle>
+								<circle cx="18" cy="12" r="2"></circle>
+							</svg>
+						</button>
 						<div
-							hx-delete={ string(templ.URL(fmt.Sprintf("/habits/%d", habit.ID))) }
-							hx-confirm="Are you sure you want to delete this habit?"
-							class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
-							role="menuitem"
+							x-show="open"
+							@click.away="open = false"
+							class="origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
+							role="menu"
+							aria-orientation="vertical"
+							aria-labelledby="menu-button"
 						>
-							Delete
+							<div class="py-1" role="none">
+								<a
+									href={ templ.URL(fmt.Sprintf("/habits/%d/edit", habit.ID)) }
+									class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+									role="menuitem"
+								>
+									Edit
+								</a>
+								<div
+									hx-delete={ string(templ.URL(fmt.Sprintf("/habits/%d", habit.ID))) }
+									hx-confirm="Are you sure you want to delete this habit?"
+									class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+									role="menuitem"
+								>
+									Delete
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			@components.Habit(habit, months, entries)
 		</div>
 	}
 }
