--- a/internal/templates/components/month.templ
+++ b/internal/templates/components/month.templ
@@ -1,14 +1,11 @@
 package components
 
-import (
-	"github.com/tneuqole/habitmap/internal/model"
-	"github.com/tneuqole/habitmap/internal/templates"
-)
+import "github.com/tneuqole/habitmap/internal/model"
 
 var thCSS = "aspect-square"
 var trCSS = ""
 
-templ Month(month string, entries []model.Entry) {
+templ Month(month string, entriesForMonth [][]model.Entry) {
 	<div class="flex flex-col items-center m-1">
 		<h1 class="text-2xl font-medium">{ month }</h1>
 		<table class="m-1 table-auto border-separate border-spacing-1 border border-solid rounded-md">
@@ -24,7 +21,7 @@ templ Month(month string, entries []model.Entry) {
 				</tr>
 			</thead>
 			<tbody>
-				for _, week := range templates.GenerateMonth(month, entries) {
+				for _, week := range entriesForMonth {
 					<tr class={ trCSS }>
 						for _, entry := range week {
 							@Entry(entry)
