enable hx-boost and make display habit name optional in component

--- a/internal/templates/pages/habit.templ
+++ b/internal/templates/pages/habit.templ
@@ -77,7 +77,7 @@ templ Habit(habit model.Habit, months []string, entriesForMonths map[string][][]
 					</div>
 				</div>
 			</div>
-			@components.Habit(habit, months, entriesForMonths)
+			@components.Habit(habit, months, entriesForMonths, false)
 		</div>
 	}
 }
