--- a/internal/templates/components/habit.templ
+++ b/internal/templates/components/habit.templ
@@ -1,12 +1,18 @@
 package components
 
-import "github.com/tneuqole/habitmap/internal/model"
+import (
+	"fmt"
+	"github.com/tneuqole/habitmap/internal/model"
+	"github.com/tneuqole/habitmap/internal/templates"
+)
 
-templ Habit(habit model.Habit, months []string, entriesForMonths map[string][][]model.Entry) {
+templ Habit(habit model.Habit, months []string, entriesForMonths map[string][][]model.Entry, showName bool) {
 	<div class="my-2">
-		<!-- <h1 class={ templates.H1CSS }> -->
-		<!-- 	<a href={ templ.URL(fmt.Sprintf("/habits/%d", habit.ID)) }>{ habit.Name }</a> -->
-		<!-- </h1> -->
+		if (showName) {
+			<h1 class={ templates.H1CSS }>
+				<a href={ templ.URL(fmt.Sprintf("/habits/%d", habit.ID)) }>{ habit.Name }</a>
+			</h1>
+		}
 		<div class="flex flex-row flex-wrap justify-center py-2">
 			for _, month := range months {
 				@Month(month, entriesForMonths[month])
