--- a/internal/templates/components/entry.templ
+++ b/internal/templates/components/entry.templ
@@ -8,21 +8,25 @@ import (
 var tdCSS = "border-slate-400 border border-solid rounded-md p-5 aspect-square"
 
 templ Entry(entry model.Entry) {
-	if entry.ID == 0 && entry.EntryDate == "" {
+	if entry.EntryDate == "" {
 		<td class="aspect-square p-5"></td>
 	} else if entry.ID == 0 && entry.EntryDate != "" {
 		<td
 			class={ tdCSS + " bg-slate-100 hover:bg-red-200" }
 			title={ entry.EntryDate[8:] }
-			hx-post="/entry"
+			hx-post="/entries"
 			hx-trigger="click"
 			hx-swap="outerHTML"
-		></td>
+			hx-include="this"
+		>
+			<input name="habitId" value={ strconv.Itoa(int(entry.HabitID)) } type="hidden"/>
+			<input name="entryDate" value={ entry.EntryDate } type="hidden"/>
+		</td>
 	} else {
 		<td
 			class={ tdCSS + " bg-red-400 hover:bg-red-200" }
 			title={ entry.EntryDate[8:] }
-			hx-delete={ "/entry/" + strconv.Itoa(int(entry.ID)) }
+			hx-delete={ "/entries/" + strconv.Itoa(int(entry.ID)) }
 			hx-trigger="click"
 			hx-swap="outerHTML"
 		></td>
