--- a/internal/templates/forms/update_habit.templ
+++ b/internal/templates/forms/update_habit.templ
@@ -7,7 +7,7 @@ import (
 )
 
 templ UpdateHabit(data templates.HabitFormData) {
-	@layouts.Base("Update Habit") {
+	@layouts.Base("Update Habit", nil) {
 		<div class="flex flex-col mx-auto items-center w-1/3">
 			<h1 class={ templates.H1CSS }>Update Habit</h1>
 			<form action={ templ.URL(fmt.Sprintf("/habits/%d/edit", data.ID)) } method="POST" class="w-full py-2">
