--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -1,8 +1,11 @@
 package layouts
 
-import "github.com/tneuqole/habitmap/internal/templates/components"
+import (
+	"github.com/tneuqole/habitmap/internal/templates/components"
+	"github.com/tneuqole/habitmap/internal/util"
+)
 
-templ Base(title string) {
+templ Base(title string, appErr *util.AppError) {
 	<html lang="en">
 		<head>
 			<title>{ title }</title>
@@ -16,6 +19,9 @@ templ Base(title string) {
 				@components.Nav()
 			</header>
 			<main class="flex-1 m-4">
+				if appErr != nil {
+					@components.Flash(*appErr)
+				}
 				{ children... }
 			</main>
 			<footer class="">
