--- a/internal/templates/pages/habits.templ
+++ b/internal/templates/pages/habits.templ
@@ -7,7 +7,7 @@ import (
 )
 
 templ Habits(habits []model.Habit) {
-	@layouts.Base("Habits") {
+	@layouts.Base("Habits", nil) {
 		<div class="flex flex-col">
 			<a href="/habits/new" class="w-10 self-end bg-blue-600 text-center text-white font-medium my-1 py-1 rounded-md hover:bg-blue-700 transition">+</a>
 			<div class="">
