--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -1,11 +1,11 @@
 package layouts
 
 import (
+	"github.com/tneuqole/habitmap/internal/ctxutil"
 	"github.com/tneuqole/habitmap/internal/templates/components"
-	"github.com/tneuqole/habitmap/internal/util"
 )
 
-templ Base(title string, appErr *util.AppError) {
+templ Base(title string) {
 	<html lang="en">
 		<head>
 			<title>{ title }</title>
@@ -19,8 +19,8 @@ templ Base(title string, appErr *util.AppError) {
 				@components.Nav()
 			</header>
 			<main class="flex-1 m-4">
-				if appErr != nil {
-					@components.Flash(*appErr)
+				if appError, ok := ctxutil.GetAppError(ctx); ok {
+					@components.Flash(appError)
 				}
 				{ children... }
 			</main>
