implement user signup

--- a/internal/templates/components/nav.templ
+++ b/internal/templates/components/nav.templ
@@ -4,9 +4,16 @@ var linkCss = "text-gray-800 font-semibold text-lg hover:text-blue-600 transitio
 
 templ Nav() {
 	<nav class="bg-gray-300 shadow">
-		<div class="inline-flex items-center space-x-4 py-2 mx-4">
-			<div class="flex justify-center items-center w-10 h-10 bg-blue-500 rounded-full text-white text-2xl font-bold">H</div>
-			<a href="/habits" class={ linkCss }>Habits</a>
+		<div class="flex justify-between items-center mx-4 py-2">
+			<div class="inline-flex items-center space-x-4">
+				<div class="flex justify-center items-center w-10 h-10 bg-blue-500 rounded-full text-white text-2xl font-bold">H</div>
+				<a href="/habits" class={ linkCss }>Habits</a>
+			</div>
+			<div class="inline-flex space-x-4">
+				<a href="/users/signup" class={ linkCss }>Signup</a>
+				<a href="/users/login" class={ linkCss }>Login</a>
+				<a hx-post="/users/logout" class={ linkCss }>Logout</a>
+			</div>
 		</div>
 	</nav>
 }
