--- a/internal/templates/formcomponents/update_habit.templ
+++ b/internal/templates/formcomponents/update_habit.templ
@@ -15,8 +15,8 @@ templ UpdateHabit(habitID int64, data forms.CreateHabitForm) {
 				<div class="flex flex-col">
 					<label for="name" class="my-1">New Name</label>
 					<input type="text" name="name" id="name" value={ data.Name } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
-					if data.Errors["Name"] != "" {
-						<span class="text-red-500 text-sm">{ data.Errors["Name"] }</span>
+					if data.FieldErrors["Name"] != "" {
+						<span class="text-red-500 text-sm">{ data.FieldErrors["Name"] }</span>
 					}
 					<button type="submit" class="w-1/3 place-self-center bg-blue-600 text-white font-medium my-1 py-1 rounded-md hover:bg-blue-700 transition">Submit</button>
 				</div>
