--- a/internal/templates/formcomponents/create_habit.templ
+++ b/internal/templates/formcomponents/create_habit.templ
@@ -2,20 +2,21 @@ package formcomponents
 
 import (
 	"github.com/tneuqole/habitmap/internal/forms"
+	"github.com/tneuqole/habitmap/internal/session"
 	"github.com/tneuqole/habitmap/internal/templates"
 	"github.com/tneuqole/habitmap/internal/templates/layouts"
 )
 
-templ CreateHabit(data forms.CreateHabitForm) {
-	@layouts.Base("Create Habit") {
+templ CreateHabit(data session.SessionData, form forms.CreateHabitForm) {
+	@layouts.Base(data, "Create Habit") {
 		<div class="flex flex-col mx-auto items-center w-1/3">
 			<h1 class={ templates.H1CSS }>Create Habit</h1>
 			<form action="/habits/new" method="POST" class="w-full py-2">
 				<div class="flex flex-col">
 					<label for="name" class="my-1">Name</label>
-					<input type="text" name="name" id="name" value={ data.Name } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
-					if data.FieldErrors["Name"] != "" {
-						<span class="text-red-500 text-sm">{ data.FieldErrors["Name"] }</span>
+					<input type="text" name="name" id="name" value={ form.Name } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
+					if form.FieldErrors["Name"] != "" {
+						<span class="text-red-500 text-sm">{ form.FieldErrors["Name"] }</span>
 					}
 					<button type="submit" class="w-1/3 place-self-center bg-blue-600 text-white font-medium my-1 py-1 rounded-md hover:bg-blue-700 transition">Submit</button>
 				</div>
