--- a/internal/templates/formcomponents/login.templ
+++ b/internal/templates/formcomponents/login.templ
@@ -2,28 +2,29 @@ package formcomponents
 
 import (
 	"github.com/tneuqole/habitmap/internal/forms"
+	"github.com/tneuqole/habitmap/internal/session"
 	"github.com/tneuqole/habitmap/internal/templates"
 	"github.com/tneuqole/habitmap/internal/templates/layouts"
 )
 
-templ Login(data forms.LoginForm) {
-	@layouts.Base("Login") {
+templ Login(data session.SessionData, form forms.LoginForm) {
+	@layouts.Base(data, "Login") {
 		<div class="flex flex-col mx-auto items-center w-1/3">
 			<h1 class={ templates.H1CSS }>Login</h1>
 			<form action={ templ.URL("/users/login") } method="POST" class="w-full py-2">
 				<div class="flex flex-col">
-					for _, msg := range data.GenericErrors {
-						<span class="text-red-500 text-sm">{ msg }</span>
-					}
 					<label for="email" class="my-1">Email</label>
-					<input type="text" name="email" id="email" value={ data.Email } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
-					if data.FieldErrors["Email"] != "" {
-						<span class="text-red-500 text-sm">{ data.FieldErrors["Email"] }</span>
+					<input type="text" name="email" id="email" value={ form.Email } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
+					if form.FieldErrors["Email"] != "" {
+						<span class="text-red-500 text-sm">{ form.FieldErrors["Email"] }</span>
 					}
 					<label for="password" class="my-1">Password</label>
 					<input type="password" name="password" id="password" class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
-					if data.FieldErrors["Password"] != "" {
-						<span class="text-red-500 text-sm">{ data.FieldErrors["Password"] }</span>
+					if form.FieldErrors["Password"] != "" {
+						<span class="text-red-500 text-sm">{ form.FieldErrors["Password"] }</span>
+					}
+					for _, msg := range form.GenericErrors {
+						<span class="text-red-500 text-sm">{ msg }</span>
 					}
 					<button type="submit" class="w-1/3 place-self-center bg-blue-600 text-white font-medium my-1 py-1 rounded-md hover:bg-blue-700 transition">Submit</button>
 				</div>
