--- a/internal/templates/formcomponents/signup.templ
+++ b/internal/templates/formcomponents/signup.templ
@@ -2,30 +2,31 @@ package formcomponents
 
 import (
 	"github.com/tneuqole/habitmap/internal/forms"
+	"github.com/tneuqole/habitmap/internal/session"
 	"github.com/tneuqole/habitmap/internal/templates"
 	"github.com/tneuqole/habitmap/internal/templates/layouts"
 )
 
-templ Signup(data forms.SignupForm) {
-	@layouts.Base("Signup") {
+templ Signup(data session.SessionData, form forms.SignupForm) {
+	@layouts.Base(data, "Signup") {
 		<div class="flex flex-col mx-auto items-center w-1/3">
 			<h1 class={ templates.H1CSS }>Signup</h1>
 			<form action={ templ.URL("/users/signup") } method="POST" class="w-full py-2">
 				<div class="flex flex-col">
 					<label for="name" class="my-1">Username</label>
-					<input type="text" name="name" id="name" value={ data.Name } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
-					if data.FieldErrors["Name"] != "" {
-						<span class="text-red-500 text-sm">{ data.FieldErrors["Name"] }</span>
+					<input type="text" name="name" id="name" value={ form.Name } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
+					if form.FieldErrors["Name"] != "" {
+						<span class="text-red-500 text-sm">{ form.FieldErrors["Name"] }</span>
 					}
 					<label for="email" class="my-1">Email</label>
-					<input type="text" name="email" id="email" value={ data.Email } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
-					if data.FieldErrors["Email"] != "" {
-						<span class="text-red-500 text-sm">{ data.FieldErrors["Email"] }</span>
+					<input type="text" name="email" id="email" value={ form.Email } class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
+					if form.FieldErrors["Email"] != "" {
+						<span class="text-red-500 text-sm">{ form.FieldErrors["Email"] }</span>
 					}
 					<label for="password" class="my-1">Password</label>
 					<input type="password" name="password" id="password" class="my-1 py-1 px-2 border rounded-md border-solid border-black"/>
-					if data.FieldErrors["Password"] != "" {
-						<span class="text-red-500 text-sm">{ data.FieldErrors["Password"] }</span>
+					if form.FieldErrors["Password"] != "" {
+						<span class="text-red-500 text-sm">{ form.FieldErrors["Password"] }</span>
 					}
 					<button type="submit" class="w-1/3 place-self-center bg-blue-600 text-white font-medium my-1 py-1 rounded-md hover:bg-blue-700 transition">Submit</button>
 				</div>
