--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -2,10 +2,11 @@ package layouts
 
 import (
 	"github.com/tneuqole/habitmap/internal/ctxutil"
+	"github.com/tneuqole/habitmap/internal/session"
 	"github.com/tneuqole/habitmap/internal/templates/components"
 )
 
-templ Base(title string) {
+templ Base(data session.SessionData, title string) {
 	<html lang="en">
 		<head>
 			<title>{ title }</title>
@@ -16,11 +17,14 @@ templ Base(title string) {
 		</head>
 		<body hx-boost="true" class="flex flex-col min-h-screen">
 			<header>
-				@components.Nav()
+				@components.Nav(data)
 			</header>
 			<main class="flex-1 m-4">
 				if appError, ok := ctxutil.GetAppError(ctx); ok {
-					@components.Flash(appError)
+					@components.ErrorFlash(appError)
+				}
+				if data.Flash != nil {
+					@components.Flash(*data.Flash)
 				}
 				{ children... }
 			</main>
