--- a/internal/templates/pages/habit.templ
+++ b/internal/templates/pages/habit.templ
@@ -3,6 +3,7 @@ package pages
 import (
 	"fmt"
 	"github.com/tneuqole/habitmap/internal/model"
+	"github.com/tneuqole/habitmap/internal/session"
 	"github.com/tneuqole/habitmap/internal/templates"
 	"github.com/tneuqole/habitmap/internal/templates/components"
 	"github.com/tneuqole/habitmap/internal/templates/layouts"
@@ -14,8 +15,8 @@ var (
 	viewNotSelectedCSS = "w-1/2 py-1 font-bold text-blue-600 text-center transition hover:bg-blue-700 hover:text-white"
 )
 
-templ Habit(habit model.Habit, view, date string, months []string, entriesForMonths map[string][][]model.Entry) {
-	@layouts.Base("Habit") {
+templ Habit(data session.SessionData, habit model.Habit, view, date string, months []string, entriesForMonths map[string][][]model.Entry) {
+	@layouts.Base(data, "Habit") {
 		<div class="flex flex-col">
 			<div
 				class="grid grid-cols-3"
