home page, auth middleware, refactor routes

--- a/internal/templates/components/entry.templ
+++ b/internal/templates/components/entry.templ
@@ -14,7 +14,7 @@ templ Entry(entry model.Entry) {
 		<td
 			class={ tdCSS + " bg-slate-100 hover:bg-red-200" }
 			title={ entry.EntryDate[8:] }
-			hx-post="/entries"
+			hx-post="/entries/new"
 			hx-trigger="click"
 			hx-swap="outerHTML"
 			hx-include="this"
