--- a/internal/templates/pages/404.templ
+++ b/internal/templates/pages/404.templ
@@ -6,14 +6,5 @@ import (
 )
 
 templ Error404(data session.SessionData) {
-	@layouts.Base(data, "Not Found") {
-		<div class="flex flex-col items-center justify-center text-center py-8 px-4">
-			<p class="mt-2 text-base text-gray-600">Sorry, the page you’re looking for doesn’t exist.</p>
-			<div class="mt-4">
-				<a href="/" class="text-base font-medium text-blue-600 hover:text-blue-500">
-					Go back home &rarr;
-				</a>
-			</div>
-		</div>
-	}
+	@layouts.Error(data, "Not Found", "The page you’re looking for does not exist.")
 }
